<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/layout_background"
    android:orientation="vertical"
    tools:context=".CreateGroup">

    <TextView
        style="@style/ScreenTitle"
        android:paddingVertical="5dp"
        android:text="Create Group" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider" />

    <TextView
        style="@style/sectionHeader"
        android:letterSpacing="0.5"
        android:text="group name" />

    <EditText
        android:id="@+id/editGroupName"
        style="@style/user_input_text"
        android:hint="Enter Group Name" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tyrian_purple"
        android:fontFamily="@font/lexend_medium"
        android:letterSpacing="0.5"
        android:text="filter friend list"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/gold_shadow"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/relationTypeRG"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radiobuttonAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/ui_field_background"
            android:checked="true"
            android:layout_marginStart="1dp"
            android:fontFamily="@font/lexend_medium"
            android:text="@string/any_choice"
            android:textSize="13sp"/>

        <RadioButton
            android:id="@+id/radiobuttonCasual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="1dp"
            android:background="@color/ui_field_background"
            android:fontFamily="@font/lexend_medium"
            android:text="@string/casual_choice"
            android:textSize="13sp"/>

        <RadioButton
            android:id="@+id/radiobuttonWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/ui_field_background"
            android:fontFamily="@font/lexend_medium"
            android:text="@string/work_choice"
            android:textSize="13sp"/>

        <RadioButton
            android:id="@+id/radiobuttonSchool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="1dp"
            android:background="@color/ui_field_background"
            android:fontFamily="@font/lexend_medium"
            android:text="@string/school_choice"
            android:textSize="13sp"/>

        <RadioButton
            android:id="@+id/radiobuttonOnline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="1dp"
            android:background="@color/ui_field_background"
            android:fontFamily="@font/lexend_medium"
            android:text="@string/online_choice"
            android:textSize="13sp"/>
    </RadioGroup>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        style="@style/sectionHeader"
        android:letterSpacing="0.3"
        android:text="select friends" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewFriends"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/buttonCreateGroup"
        style="@style/navigationButtonStyle"
        android:text="Create"
        android:layout_marginVertical="10dp"
        app:cornerRadius="1dp" />

</LinearLayout>